--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-tracker-svite-typescript",
+  "name": "time-tracker",
   "version": "0.0.0",
   "scripts": {
     "validate": "svelte-check && tsc --noEmit",
