--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "date-fns": "^2.16.1",
-    "firebase": "^8.2.5"
+    "firebase": "^8.2.5",
+    "flatpickr": "^4.6.9"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^1.0.10",
