--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "firebase": "^8.2.5",
+    "firebaseui": "^4.7.3",
     "flatpickr": "^4.6.9"
   },
   "devDependencies": {
